--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "admin",
   "version": "0.1.0",
+  "homepage": "https://MatjashDmitriy.github.io/admin",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -32,6 +33,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
